# bunjs-rest-api

./: .gitignore  README.md  package.json  tableExport.json  up.sql
amd-scraper/: README.md  bun.lockb  package.json
amd-scraper/amd-processor-types/: index.ts
app-api-rust/: .env  .rustc_info.json  Cargo.toml  data.db
app-api-rust/src/: database.rs  main.rs  schema.rs
app-api-rust/src/database/: requests.rs  responses.rs
app-api-rust/src/sql_queries/: get_amd_processor_type_by_id.sql
intel-scraper/: bun.lockb  package.json
intel-scraper/intel-processor-list/: index.ts
intel-scraper/intel-processor-types/: index.ts
